Fixed apexcharts dark mode

--- a/src/app/components/go/go.component.css
+++ b/src/app/components/go/go.component.css
@@ -19,7 +19,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(var(--bs-body-bg-rgb), .5);
     /* Semi-transparent background */
     display: flex;
     /* Center the loading message */
@@ -27,6 +27,19 @@
     align-items: center;
     z-index: 9999;
     /* Ensure it covers all content within the parent component */
+}
+
+.loading-overlay>.spinner-blurred {
+    background: rgba(var(--bs-body-bg-rgb), .5);
+    backdrop-filter: blur(100px);
+    -webkit-backdrop-filter: blur(100px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    z-index: 10000;
+    border-radius: var(--bs-border-radius-xl);
+    border: var(--bs-border-width) solid var(--bs-border-color-translucent);
 }
 
 /* Define pulsing animation */
@@ -303,7 +316,7 @@
     color: var(--bs-body-color);
 }
 
-.dx-texteditor *{
+.dx-texteditor * {
     color: var(--bs-body-color) !important;
     padding: .375rem .75rem;
     font-size: 1rem;
