--- a/src/app/components/igv/igv.component.css
+++ b/src/app/components/igv/igv.component.css
@@ -91,16 +91,33 @@
 }
 
 .loading-overlay {
-  position: fixed;  /* Positioned relative to the content-wrapper */
+  position: fixed;
+  /* Positioned relative to the parent component */
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-  display: flex;    /* Center the loading message */
+  background-color: rgba(var(--bs-body-bg-rgb), .5);
+  /* Semi-transparent background */
+  display: flex;
+  /* Center the loading message */
   justify-content: center;
   align-items: center;
-  z-index: 9999;    /* Ensure it covers all content within the content-wrapper */
+  z-index: 9999;
+  /* Ensure it covers all content within the parent component */
+}
+
+.loading-overlay > .spinner-blurred {
+  background: rgba(var(--bs-body-bg-rgb), .5);
+  backdrop-filter: blur(100px);
+  -webkit-backdrop-filter: blur(100px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  z-index: 10000;
+  border-radius: var(--bs-border-radius-xl);
+  border: var(--bs-border-width) solid var(--bs-border-color-translucent);
 }
 
 /* Define pulsing animation */
